--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">n
-    <title>Minesweeper</title>
-</head>
-<body>
-    <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
 
+    <title>Minesweeper</title>
+  </head>
+  <body>
+    <header>
+      <div class="container-flex">
+        <div class="div1">
+          <p>Dificulty</p>
+          <p class="bomb-navbar">00</p>
+          <p class="timer-navbar">000</p>
+          <p>Sound</p>
+        </div>
+      </div>
     </header>
     <main>
-
+      <button></button>
     </main>
-</body>
+  </body>
 </html>
